force-app/main/default/objects/Round__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Rounds</relationshipLabel>
    <relationshipName>Rounds</relationshipName>
    <type>Lookup</type>
</CustomField>