force-app/main/default/objects/Round__c/fields/CodepairLink__c.field-meta.xml
<CustomField>
    <fullName>CodepairLink__c</fullName>
    <formula>Candidate__r.CodepairLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codepair Link</label>
    <type>Text</type>
</CustomField>