force-app/main/default/objects/Round__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>