force-app/main/default/objects/Round__c/fields/HiringEvent__c.field-meta.xml
<CustomField>
    <fullName>HiringEvent__c</fullName>
    <label>Hiring Event</label>
    <referenceTo>Hiring_Event__c</referenceTo>
    <relationshipLabel>Rounds</relationshipLabel>
    <relationshipName>Rounds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>