force-app/main/default/objects/Round__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>Interviewer__c</referenceTo>
    <relationshipLabel>Rounds</relationshipLabel>
    <relationshipName>Rounds</relationshipName>
    <type>Lookup</type>
</CustomField>