force-app/main/default/objects/Round__c/fields/InterviewLink__c.field-meta.xml
<CustomField>
    <fullName>InterviewLink__c</fullName>
    <formula>Candidate__r.InterviewLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Link</label>
    <type>Text</type>
</CustomField>