force-app/main/default/objects/Round__c/fields/Observer__c.field-meta.xml
<CustomField>
    <fullName>Observer__c</fullName>
    <label>Observer</label>
    <type>Email</type>
</CustomField>