force-app/main/default/objects/Round__c/fields/ProxyInterviewer__c.field-meta.xml
<CustomField>
    <fullName>ProxyInterviewer__c</fullName>
    <label>Proxy Interviewer</label>
    <type>Email</type>
</CustomField>