force-app/main/default/objects/Round__c/fields/RoundStatus__c.field-meta.xml
<CustomField>
    <fullName>RoundStatus__c</fullName>
    <label>Round Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>