force-app/main/default/objects/Round__c/fields/SiftLink__c.field-meta.xml
<CustomField>
    <fullName>SiftLink__c</fullName>
    <label>SIFT Link</label>
    <type>Url</type>
</CustomField>